# SuDoKube-CLI

./: .gitignore  DESIGN.md  README.md
cli/: Cargo.toml
cli/src/: app.rs  game_utils.rs  i18n.rs  input.rs  main.rs  menu.rs  render.rs  save.rs  settings.rs  shop.rs  types.rs  widgets.rs
cli/src/config/: keymap.rs  mod.rs
cli/src/input/: game.rs  keymap.rs  menu.rs  mod.rs  navigation.rs  settings.rs
cli/src/render/: cube3d.rs  game.rs  menu.rs  mod.rs  overlay.rs  settings.rs  types.rs  util.rs
cli/src/widgets/: button.rs  popup.rs  scrollable_list.rs
core/: Cargo.toml
core/src/: cube.rs  game_state.rs  lib.rs  puzzle.rs  theme.rs  wfc.rs
doc/: README_zh.md  ui_desgin.md  ui_refactor_plan.md
gui/: Cargo.toml
gui/src/: app_state.rs  main.rs  theme.rs
gui/src/input/: actions.rs  mod.rs  picker.rs
gui/src/render/: camera.rs  cell_visual.rs  cube_mesh.rs  digit_cubes.rs  mod.rs
gui/src/save/: db.rs
gui/src/ui/: history_panel.rs  hud.rs  loading.rs  mod.rs
