[package]
name = "sudokube-gui"
version = "0.1.0"
edition = "2024"

[dependencies]
sudokube-core = { path = "../core", features = ["bevy"] }
bevy = "0.18.1"
rand = "0.8"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.34", features = ["bundled"] }
ab_glyph = "0.2"
futures-lite = "2"
